Header and Error page update

--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,6 +1,10 @@
-.header {
+.header.navbar {
     background: transparent;
     padding: 15px 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
 }
 
 .navbar-brand {
